<resources>
    <string name="app_name">Personal Budget</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_category">Category Activity</string>
    <string name="action_add_category">Add Category</string>
    <string name="action_delete_category">Delete Category</string>
    <string name="action_see_chart">See category Chart</string>
    <string name="title_activity_categories_chart">Categories Chart</string>
    <string name="image_description">image</string>
    <string name="amount">Amount:</string>
    <string name="date">Date:</string>
    <string name="transaction_amount">Here goes transaction amount!</string>
    <string name="date_placeholder">Here goes date!</string>
    <string name="move_to">Move to</string>
    <string name="title_activity_monthly_chart">Monthly Chart</string>
    <string name="action_monthly_chart">See monthly charts</string>
    <string name="dialog_category_rule">Category rules</string>
    <string name="dialog_category_name">Category name</string>
    <string name="action_change_rule">Change rule</string>
    <string name="action_filter">Filter content</string>
    <string name="title_activity_filter">Filtered Transactions</string>

    <string name="title_section1">Income</string>
    <string name="title_section2">Expenses</string>
    <string name="message_text_place_holder">Here goes message text!</string>
</resources>
