<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_chart_categories"
        android:orderInCategory="100"
        android:title="@string/action_see_chart"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_category"
        android:orderInCategory="100"
        android:title="@string/action_add_category"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_category"
        android:orderInCategory="100"
        android:title="@string/action_delete_category"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
